# genaiops-azureaisdk-template

./: .env.sample  .flake8  .gitignore  math_coding_eval_20241119_105102.json  math_coding_eval_20241119_212430.json  math_coding_eval_20241121_073448.json  math_coding_eval_20241121_085953.json  math_coding_eval_20241209_111412.json  math_coding_eval_20250127_170529.json  math_coding_eval_20250206_113646.json  pyproject.toml  readme.MD
.github/: math_coding_ci_dev_workflow.yaml  math_coding_pr_workflow.yaml  platform_ci_dev_workflow.yaml
.github/requirements/: build_validation_requirements.txt  execute_job_requirements.txt
.github/workflows/: build_validation_workflow.yaml  infra_deploy_terraform_workflow.yaml  math_coding_ci_dev_workflow.yaml  math_coding_foundry_agent_ci_dev_workflow.yaml  math_coding_foundry_agent_pr_workflow copy.yaml  math_coding_foundry_agent_pr_workflow.yaml  math_coding_pr_workflow.yaml  platform_cd_function_deployment.yaml  platform_ci_dev_workflow.yaml  platform_pr_dev_workflow.yaml
docs/: index.html  index.md
docs/guides/: experimentation.html  experimentation.md  getting-started.html  (+9 more)
llmops/: eval_experiments.py  experiment.py  experiment_cloud_config.py
math_coding/: deployment_config.yaml  experiment.dev.yaml  experiment.yaml  online_evaluation_config.yaml  requirements.txt  sample-request.json
math_coding_agent/: README.md  deployment_config.yaml  experiment.yaml
math_coding_async/: experiment.yaml
tests/: __init__.py  test_connections.py  test_datamappings.py  test_evaluator.py  test_experiment_load.py  test_experiments.py
(+47 files in other folders)
